Updates, clean up add release properties