@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>jcs</groupId>
     <artifactId>jcs</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>JCS</name>
     <url>https://github.com/fransjacobs/model-railway</url>
@@ -29,12 +29,12 @@
         <dependency>
             <groupId>org.tinylog</groupId>
             <artifactId>tinylog-api</artifactId>
-            <version>2.6.2</version>
+            <version>2.7.0</version>
         </dependency>
         <dependency>
             <groupId>org.tinylog</groupId>
             <artifactId>tinylog-impl</artifactId>
-            <version>2.6.2</version>
+            <version>2.7.0</version>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
@@ -49,12 +49,12 @@
         <dependency>
             <groupId>org.beryx</groupId>
             <artifactId>awt-color-factory</artifactId>
-            <version>1.0.1</version>
+            <version>1.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-nop</artifactId>
-            <version>2.0.6</version>
+            <version>2.0.12</version>
         </dependency>
         <dependency>
             <groupId>com.dieselpoint</groupId>
@@ -74,7 +74,7 @@
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20231013</version>
+            <version>20240303</version>
         </dependency>
         <dependency>
             <groupId>com.twelvemonkeys.imageio</groupId>
@@ -84,7 +84,7 @@
         <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>batik</artifactId>
-            <version>1.16</version>
+            <version>1.17</version>
             <type>pom</type>
         </dependency>
         <dependency>
@@ -100,19 +100,19 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.10.0-M1</version>
+            <version>5.10.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
-            <version>5.10.0-M1</version>
+            <version>5.10.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.vintage</groupId>
             <artifactId>junit-vintage-engine</artifactId>
-            <version>5.10.0-M1</version>
+            <version>5.10.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -142,12 +142,12 @@
         <dependency>
             <groupId>com.formdev</groupId>
             <artifactId>flatlaf</artifactId>
-            <version>3.2.1</version>
+            <version>3.2.5</version>
         </dependency>
         <dependency>
             <groupId>org.httprpc</groupId>
             <artifactId>sierra</artifactId>
-            <version>2.0.2</version>
+            <version>2.0.5</version>
         </dependency>     
         <dependency>
             <groupId>eu.hansolo</groupId>
@@ -162,7 +162,7 @@
         <dependency>
             <groupId>com.fazecast</groupId>
             <artifactId>jSerialComm</artifactId>
-            <version>2.10.3</version>
+            <version>2.10.4</version>
         </dependency>
         <dependency>
             <groupId>org.netbeans.external</groupId>
@@ -265,7 +265,16 @@
                     <copyDependencies>true</copyDependencies>
                     <displayName>JCS</displayName>
                     <organizationName>Frans's Train Projects</organizationName>
-                    <vmArgs>-Xms256m -Xmx512m</vmArgs> 
+                    <vmArgs>-Dtinylog.writer.level=trace -Xms256m -Xmx1024m --add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED -Dsun.java2d.metal=true</vmArgs> 
+                    <additionalResources>
+                        <additionalResource>${project.basedir}/README.md</additionalResource>
+                        <!--
+                        <additionalResource>${project.basedir}/DESIGN.md</additionalResource>
+                        <additionalResource>${project.basedir}/BUILDING.md</additionalResource>
+                        <additionalResource>${project.basedir}/INTERFACES.md</additionalResource>
+                        <additionalResource>assets/JCS.l4j.ini</additionalResource>
+                        -->
+                    </additionalResources>
                 </configuration>
                 <executions>
                     <execution>
@@ -318,11 +327,6 @@
                         </configuration>
                     </execution>
                 </executions>
-                <!--
-                                                          <additionalResources>
-                                                              <additionalResource>assets/JCS.l4j.ini</additionalResource>
-                                                          </additionalResources>   
-                -->                           
             </plugin>         
         </plugins>
     </build>
